numberObject now uses int for type not string, we no longer fetch after commitUpdate or commitAdd, changed up() to update() in appscreenform, bpanel is now private for screens